--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
-
-
+<div>
+    <div sec:authorize="!isAuthenticated()">
+        <h4>Гость</h4>
+        <h4><a href="/login">Войти</a></h4>
+        <!-- <h4><a href="/registration">Зарегистрироваться</a></h4> -->
+    </div>
+    <div sec:authorize="isAuthenticated()">
+        <h4>Пользователь: <span sec:authentication="name"></span> </h4>
+        <h4><a href="/logout">Выйти</a></h4>
+    </div>
+    <h4><a href="/user">Моя страница (пользователь)</a></h4>
+    <h4><a href="/admin">Пользователи (админ)</a></h4>
+</div>
 </body>
 </html>
