--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:form="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -18,7 +18,6 @@
         <br/>
         <label for="role">role</label>
             <select th:object="${userForm}" th:field="*{roles}" id="role">
-                <!--<option th:each="r : ${role}" th:value="${role}" th:text="${role.getName()}">-->
                 <option th:value="1" th:text="user"></option>
                 <option th:value="2" th:text="admin"></option>
             </select>
