--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,6 +7,18 @@
 <body>
 <div>
     <form th:method="POST" th:action="@{/registration}" th:object="${userForm}">
+        <label for="firstName">first name: </label>
+        <input type="text" th:field="*{firstName}" id="firstName"/>
+        <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Username Error</div>
+        <br/>
+        <label for="lastName">last name: </label>
+        <input type="text" th:field="*{lastName}" id="lastName"/>
+        <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Username Error</div>
+        <br/>
+        <label for="age">age: </label>
+        <input type="text" th:field="*{age}" id="age"/>
+        <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Username Error</div>
+        <br/>
         <label for="username">username: </label>
         <input type="text" th:field="*{username}" id="username"/>
         <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
