--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,14 +1,91 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Spring Security Example</title>
+
+    <title>User page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<div>
-    <h3 th:text="${user.toString()}">VALUE</h3>
-    <hr>
-    <a href="/logout">Выход</a>
-    <a href="/">Главная</a>
+
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <div class="collapse navbar-collapse">
+        <div class="navbar-brand" sec:authorize="isAuthenticated()">
+            <span class="font-weight-bold" sec:authentication="name"></span> with roles: <span
+                th:each="role : ${#authentication.authorities}">
+             <span th:text="${role}"></span>
+        </span>
+        </div>
+    </div>
+
+    <div class="d-flex flex-row-reverse">
+        <a class="text-secondary" href="/logout">Logout</a>
+    </div>
+</nav>
+
+<!--  th:each="j : ${user.roles}" th:if="${j.getName()=='ROLE_ADMIN'}"-->
+<div class="container-fluid flex:1">
+    <div class="row">
+        <div class="col-md-2" style="padding: 20px 0 0;">
+            <ul class="nav nav-pills nav-fill">
+                <li class="container-fluid m-0 p-0" th:each="j : ${user.roles}" th:if="${j.getName()=='ROLE_ADMIN'}">
+                    <a class="nav-link" href="/admin">Admin</a>
+                </li>
+                <li class="container-fluid m-0 p-0">
+                    <a class="nav-link active" href="/user">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-10 bg-light" style="padding: 20px; height: 800px">
+            <h1 style="padding-bottom: 15px">User-information page</h1>
+
+
+            <div id="myTabContent">
+                <div class="card tab-pane show active" id="admin" role="tabpanel" aria-labelledby="admin-tab">
+                    <h5 class="card-header">About user</h5>
+                    <div style="padding: 20px">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Age</th>
+                                <th>Email</th>
+                                <th>Role</th>
+                            </tr>
+                            </thead>
+                            <tr class="cell no_border">
+                                <td th:text="${user.id}"></td>
+                                <td th:text="${user.firstName}"></td>
+                                <td th:text="${user.lastName}"></td>
+                                <td th:text="${user.age}"></td>
+                                <td th:text="${user.username}"></td>
+                                <td>
+                    <span th:each="j : ${user.roles}">
+                        <span th:text="${j.toString()}"></span>
+                    </span>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
