--- a/src/main/resources/templates/admin3.html
+++ b/src/main/resources/templates/admin3.html
@@ -76,16 +76,16 @@
                                         <div class="table-responsive">
                                             <table class="table table-striped bg-white">
                                                 <thead>
-                                                    <tr>
-                                                        <th>ID</th>
-                                                        <th>First Name</th>
-                                                        <th>Last Name</th>
-                                                        <th>Age</th>
-                                                        <th>Email</th>
-                                                        <th>Role</th>
-                                                        <th>Edit</th>
-                                                        <th>Delete</th>
-                                                    </tr>
+                                                <tr>
+                                                    <th>ID</th>
+                                                    <th>Name</th>
+                                                    <th>Surname</th>
+                                                    <th>Age</th>
+                                                    <th>Password</th>
+                                                    <th>Role</th>
+                                                    <th>Edit</th>
+                                                    <th>Delete</th>
+                                                </tr>
                                                 </thead>
                                                 <tbody id="usersTable">
                                                 </tbody>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
 
-                    <!--CurrentUser info-->
+                <!--CurrentUser info-->
                 <div class="tab-pane fade" id="userInfo" role="tabpanel">
                     <div class="container-fluid">
                         <h2>User Information Page</h2>
