--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -110,7 +110,7 @@
                                             <br>
                                             <label for="lastName" class="form-label fw-bold mb-0">Last name</label>
                                             <input type="text" class="form-control" id="lastName" placeholder="Last name">
-                                            <span id="surnameError" class="text-danger"></span>
+                                            <span id="lastNameError" class="text-danger"></span>
                                             <br>
                                             <label for="age" class="form-label fw-bold mb-0">Age</label>
                                             <input type="number" class="form-control" id="age" placeholder="Age">
