--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,53 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-
-    <title>Login page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-<body>
 
+<body class="pt-5">
 
-<div>
-    <div class="container col-md-3">
-        <form role="form" method="POST" action="/login">
+<div class="col-3 mx-auto">
 
-            <div class="justify-content-center" style="padding: 50px 0 5px;">
-                <h2 class="font-weight-bold">Please sign in</h2>
+    <main>
+        <form class="form-horizontal" role="form" method="POST" action="/process_login">
+            <h1 class="h3 mb-3 fw-bold text-left">Please sign in</h1>
+
+            <div class="form-floating">
+                <input type="email" class="form-control" name="email" id="floatingInput" placeholder="name@example.com" style="height: 40px">
+                <label for="floatingInput" class="text-muted d-flex align-items-center">Email address</label>
             </div>
-
-            <div class="form-group text-center">
-                <div style="padding: 0">
-                    <input name="username" type="text" class="form-control" placeholder="Email address" id="username" required/>
-                </div>
-                <div style="padding-bottom: 10px">
-                    <input name="password" type="password" class="form-control" placeholder="Password" id="password" required/>
-                </div>
-                <div>
-                    <button type="submit" class="btn btn-primary btn-block btn-lg">Sign In</button>
-                </div>
+            <div class="form-floating">
+                <input type="password" class="form-control d-flex align-items-center" name="password" id="floatingPassword" placeholder="Password" style="height: 40px">
+                <label for="floatingPassword" class="text-muted d-flex align-items-center">Password</label>
             </div>
-
-            <div th:if="${param.error}" class="text-danger">
-                invalid password or email address
+            <button class="w-100 btn btn-lg btn-primary mt-2" type="submit">Sign in</button>
+            <div th:if="${param.error}" style="color: red">
+                Incorrect Email or Password
             </div>
         </form>
-
-    </div>
+    </main>
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
 </body>
 </html>
