--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,7 +11,7 @@
 <body>
 <!--Navbar-->
 <header>
-    <nav class="navbar navbar-dark bg-dark p-0 shadow ">
+    <nav class="navbar navbar-dark bg-dark shadow ">
         <div class="nav-item text-white px-3">
             <span id="currentUserEmailNavbar"></span>
         </div>
@@ -44,7 +44,7 @@
         </div>
 
 
-        <div class="col-md-10 bg-light">
+        <div class="col-md-10 bg-light" style="height: 840px">
             <div class="tab-content">
 
                 <!--Admin Panel-->
