--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -104,25 +104,25 @@
                                             Add new user</h5>
                                     </div>
                                     <div class="card-body col-5 mx-auto text-center mt-3">
-                                        <form id="newUser">
+                                        <form class="needs-validation" id="newUser">
                                             <label for="firstName" class="form-label fw-bold mb-0">First name</label>
-                                            <input type="text" class="form-control" id="firstName" placeholder="First name">
+                                            <input type="text" class="form-control" id="firstName" placeholder="First name" required>
                                             <span id="nameError" class="text-danger"></span>
                                             <br>
                                             <label for="lastName" class="form-label fw-bold mb-0">Last name</label>
-                                            <input type="text" class="form-control" id="lastName" placeholder="Last name">
+                                            <input type="text" class="form-control" id="lastName" placeholder="Last name" required>
                                             <span id="lastNameError" class="text-danger"></span>
                                             <br>
                                             <label for="age" class="form-label fw-bold mb-0">Age</label>
-                                            <input type="number" class="form-control" id="age" placeholder="Age">
+                                            <input type="number" class="form-control" id="age" placeholder="Age" min="1" required>
                                             <span id="ageError" class="text-danger"></span>
                                             <br>
                                             <label for="email" class="form-label fw-bold mb-0">Email</label>
-                                            <input type="text" class="form-control" id="email" placeholder="Email">
+                                            <input type="text" class="form-control" id="email" placeholder="Email" required>
                                             <span id="emailError" class="text-danger"></span>
                                             <br>
                                             <label for="password" class="form-label fw-bold mb-0">Password</label>
-                                            <input type="text" class="form-control" id="password" placeholder="Password">
+                                            <input type="text" class="form-control" id="password" placeholder="Password" required>
                                             <span id="passwordError" class="text-danger"></span>
                                             <br>
                                             <label for="roles" class="form-label fw-bold mb-0">Role</label>
