--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -239,16 +239,16 @@
                         <input type="text" class="form-control" id="idEdit" data-user-id="id" readonly>
                         <br>
                         <label for="firstNameEdit" class="form-label fw-bold mb-0">First name</label>
-                        <input type="text"  class="form-control" id="firstNameEdit" data-user-id="firstName">
+                        <input type="text"  class="form-control" id="firstNameEdit" data-user-id="firstName" required>
                         <br>
                         <label for="lastNameEdit" class="form-label fw-bold mb-0">Last name</label>
-                        <input type="text" class="form-control" id="lastNameEdit" data-user-id="lastName">
+                        <input type="text" class="form-control" id="lastNameEdit" data-user-id="lastName" required>
                         <br>
                         <label for="ageEdit" class="form-label fw-bold mb-0">Age</label>
-                        <input type="text" class="form-control" id="ageEdit" data-user-id="age">
+                        <input type="number" class="form-control" id="ageEdit" data-user-id="age" min = "1" required>
                         <br>
                         <label for="emailEdit" class="form-label fw-bold mb-0">Email</label>
-                        <input type="text"  class="form-control" id="emailEdit" data-user-id="email">
+                        <input type="text"  class="form-control" id="emailEdit" data-user-id="email" required>
                         <br>
                         <label for="passwordEdit" class="form-label fw-bold mb-0">Password</label>
                         <input type="text"  class="form-control" id="passwordEdit" data-user-id="password">
