--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -251,7 +251,7 @@
                         <input type="text"  class="form-control" id="emailEdit" data-user-id="email" required>
                         <br>
                         <label for="passwordEdit" class="form-label fw-bold mb-0">Password</label>
-                        <input type="text"  class="form-control" id="passwordEdit" data-user-id="password">
+                        <input type="text"  class="form-control" id="passwordEdit" >
                         <br>
                         <label for="rolesEdit" class="form-label fw-bold mb-0">Role</label>
                         <select class="form-select" id="rolesEdit" data-user-id="rolesEdit"  size="2" multiple="multiple">
