--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -118,7 +118,7 @@
                                             <span id="ageError" class="text-danger"></span>
                                             <br>
                                             <label for="email" class="form-label fw-bold mb-0">Email</label>
-                                            <input type="text" class="form-control" id="email" placeholder="Email" required>
+                                            <input type="email" class="form-control" id="email" placeholder="Email" required>
                                             <span id="emailError" class="text-danger"></span>
                                             <br>
                                             <label for="password" class="form-label fw-bold mb-0">Password</label>
@@ -248,7 +248,7 @@
                         <input type="number" class="form-control" id="ageEdit" data-user-id="age" min = "1" required>
                         <br>
                         <label for="emailEdit" class="form-label fw-bold mb-0">Email</label>
-                        <input type="text"  class="form-control" id="emailEdit" data-user-id="email" required>
+                        <input type="email"  class="form-control" id="emailEdit" data-user-id="email" required>
                         <br>
                         <label for="passwordEdit" class="form-label fw-bold mb-0">Password</label>
                         <input type="text"  class="form-control" id="passwordEdit" >
