--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -161,7 +161,7 @@
                                             <th>First Name</th>
                                             <th>Last Name</th>
                                             <th>Age</th>
-                                            <th>email</th>
+                                            <th>Email</th>
                                             <th>Role</th>
                                         </tr>
                                         </thead>
