--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -59,7 +59,7 @@
                                             <th>First Name</th>
                                             <th>Last Name</th>
                                             <th>Age</th>
-                                            <th>email</th>
+                                            <th>Email</th>
                                             <th>Role</th>
                                         </tr>
                                         </thead>
